create about section with PWA

--- a/src/app/component/icons/icons.component.html
+++ b/src/app/component/icons/icons.component.html
@@ -1,10 +1,12 @@
-@if (!nameClass()){
+@if (!nameClass()) {
   <div
-    style="mask: url({{name()}}) no-repeat center/contain; background-color: black" >
-  </div>
+    style="mask: url({{
+      name()
+    }}) no-repeat center/contain; background-color: black"
+  ></div>
 } @else {
   <div
-    style="mask: url({{name()}}) no-repeat center/contain" class="{{nameClass()}}">
-  </div>
-
+    style="mask: url({{ name() }}) no-repeat center/contain"
+    class="{{ nameClass() }}"
+  ></div>
 }
