--- a/src/app/component/icons/icons.component.sass
+++ b/src/app/component/icons/icons.component.sass
@@ -5,9 +5,17 @@ div
   height: 100%
 
 
+//miła Logo
+
 .logo__icon
   background-color: $mainColor-veryDark
 
-
 .logo__icon-mobile
   background-color: white
+
+
+//Icon About section
+.iconAbout
+  background-color: $seconddColor-dark
+
+
