rapier mobile video step 1

--- a/src/app/component/video-seciton/video-seciton.component.html
+++ b/src/app/component/video-seciton/video-seciton.component.html
@@ -1,6 +1,6 @@
 <div class="wrapperVideo">
-  <video class="videoContener" id="backround-video" loop
-         muted playsinline>
+  <video autoplay class="videoContener" id="backround-video"
+         loop muted playsinline>
     <source src="/video/flowerShop.mp4" type="video/mp4">
   </video>
   <div class="videoContent">
