--- a/src/app/component/icons/icons.component.sass
+++ b/src/app/component/icons/icons.component.sass
@@ -3,6 +3,7 @@
 div
   width: 100%
   height: 100%
+  background-color: inherit
 
 
 //miła Logo
@@ -19,3 +20,5 @@ div
   background-color: $seconddColor-dark
 
 
+.tickColor
+  background-color: $seconddColor-dark
