--- a/src/app/component/video-seciton/video-seciton.component.sass
+++ b/src/app/component/video-seciton/video-seciton.component.sass
@@ -6,6 +6,7 @@
   margin: 1rem 0
   position: relative
   overflow: hidden
+  box-shadow: 0 0 2rem .5rem $mainColor-veryDark
 
 .videoContener
   position: absolute
