--- a/src/app/component/video-seciton/video-seciton.component.html
+++ b/src/app/component/video-seciton/video-seciton.component.html
@@ -5,6 +5,6 @@
   </video>
   <div class="videoContent">
     <h4>{{ descryptionContent[randomNumber].title }}</h4>
-    <app-mainbutton hashUrlAdresButton="#payAndDelvery" nameButton="zadzwoń" />
+    <app-mainbutton nameButton="zadzwoń" tefNumberButton="{{contactNumber}}" />
   </div>
 </div>
