--- a/src/app/component/you-have-section/you-have-section.component.sass
+++ b/src/app/component/you-have-section/you-have-section.component.sass
@@ -19,7 +19,7 @@
 .imageSection
   width: 30rem
   height: 30rem
-  background-image: url('../../../../public/img/photoOne.jpeg')
+  background-image: url('../../../../public/img/photoOne.webp')
   background-size: cover
   background-repeat: no-repeat
   border-radius: 50%
