create section pay and delivery

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="wrapper">
   <app-header />
   <app-about />
-  <app-video-seciton />
+  <app-video-seciton [contactNumber]="phoneNumber" />
   <app-you-have-section />
   <app-compozition-section />
+  <app-pay-and-delivery [phoneNumber]="phoneNumber" />
 </div>
