upload pay and delivery id

--- a/src/app/component/pay-and-delivery/pay-and-delivery.component.html
+++ b/src/app/component/pay-and-delivery/pay-and-delivery.component.html
@@ -1,4 +1,4 @@
-<div class="payAndDeliverWrapper">
+<div class="payAndDeliverWrapper" id="payAndDelvery">
   <app-name-section nameSection="dostawa i płatność" />
   <div class="payDescryptionWrapper">
     <p class="infoElementPay">Wszystkie dostawy realizowane są na terenie Warszawy i
