create catalog route, and create home route. Create contact section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <div class="wrapper">
   <app-header />
-  <app-about />
-  <app-video-seciton [contactNumber]="phoneNumber" />
-  <app-you-have-section />
-  <app-compozition-section />
-  <app-pay-and-delivery [phoneNumber]="phoneNumber" />
+  <router-outlet></router-outlet>
 </div>
