--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,11 +1,9 @@
 <section class="wrapperAbout" id="about">
   <app-name-section [nameSection]="'o nas'" />
   <div class="wrapperContent">
-    @for (element of informationComponents; track element.path) {
+    @for (element of informationComponents; track element.icon) {
       <div class="elementAbout">
-        <div class="logo">
-          <app-icons name="svg/{{element.path}}" nameClass="iconAbout" />
-        </div>
+        <i class="mf-icon-{{element.icon}} icon-element"></i>
         <h3>{{ element.title }}</h3>
         <p>{{ element.descryption }}</p>
       </div>
