create footer section and change svg file for iconFont

--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -4,9 +4,7 @@
     <div class="wrapperContact">
       @for (element of dataElement; track element.name) {
         <div class="elementContact">
-          <div style="width: 3rem; height: 3rem">
-            <app-icons name="{{element.icon}}" nameClass="payColor" />
-          </div>
+          <i class="mf-icon-{{element.icon}} contactIcon"></i>
           <p>{{ element.firstLine }}</p>
           <p>{{ element.secondLine || null }}</p>
         </div>
