--- a/src/app/component/header/header.component.sass
+++ b/src/app/component/header/header.component.sass
@@ -15,14 +15,13 @@
     background-position: -15rem
 
   .blurWrapper
-    background-image: linear-gradient(rgba($seconddColor-dark,0.3),rgba($seconddColor-dark,0.3))
+    background-image: linear-gradient(rgba($seconddColor-dark, 0.3), rgba($seconddColor-dark, 0.3))
     width: 100%
     height: 100%
     display: flex
     flex-direction: column
     @media(max-width: $brakePoints-sm)
-      background-image: linear-gradient(rgba($mainColor-light,0.6),rgba($mainColor-light,0.6))
-
+      background-image: linear-gradient(rgba($mainColor-light, 0.6), rgba($mainColor-light, 0.6))
 
 
 menu
@@ -62,7 +61,6 @@ menu
     display: block
 
 
-
 .logo
   width: 150px
   height: 100px
@@ -85,13 +83,11 @@ section
     padding: 2rem
 
 
-
   & > p
     font-size: 3.5rem
     font-family: $secondFont
     color: $mainColor-veryDark
     text-align: center
-
 
 
 .mobileMenuArea
@@ -150,7 +146,6 @@ section
   align-items: center
 
 
-
 .mobileMenuElement
   font-size: 2rem
   text-decoration: none
@@ -161,7 +156,18 @@ section
     color: $seconddColor-light
 
 
-
 .logoTop
+  position: absolute
+  top: 0
+
+
+.logo-mila-desctop
+  font-size: 6rem
+  color: $mainColor-veryDark
+  text-decoration: none
+
+.menuLogo
+  font-size: 6rem
+  color: $mainColor-light
   position: absolute
   top: 0
