--- a/src/app/component/you-have-section/you-have-section.component.html
+++ b/src/app/component/you-have-section/you-have-section.component.html
@@ -6,10 +6,8 @@
       @for (element of listInfo; track element.name) {
 
         <div class="listElement">
-          <div class="iconTick">
-            <app-icons name="svg/tickIcon.svg" nameClass="tickColor" />
-          </div>
-          <li>{{ element.name }}</li>
+          <i class="mf-icon-check checkicon"></i>
+          <p>{{ element.name }}</p>
         </div>
 
 
