--- a/src/styles/reset.sass
+++ b/src/styles/reset.sass
@@ -12,6 +12,7 @@ body
   font-family: $contentFont, sans-serif
   background-color: $mainColor-light
   min-height: 100vh
+  position: relative
 
 
 ol, ul
