--- a/src/app/component/you-have-section/you-have-section.component.sass
+++ b/src/app/component/you-have-section/you-have-section.component.sass
@@ -76,10 +76,13 @@
       justify-content: start
       margin-right: 0
 
-li
+p
   font-size: 1.5rem
   margin-left: 2rem
   @media(max-width: 900px)
     font-size: 1.2rem
 
 
+.checkicon
+  font-size: 3rem
+  color: $seconddColor-dark
