add to menu contatc id to section

--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="mainWrapperContact">
+<div class="mainWrapperContact" id="contact">
   <app-name-section nameSection="kontakt" />
   <div>
     <div class="wrapperContact">
