catalog section create menu section

--- a/src/app/component/catalog-elements/catalog-elements.component.html
+++ b/src/app/component/catalog-elements/catalog-elements.component.html
@@ -1,5 +1,5 @@
 <div>
-  <ul>
+  <ul class="categoryMenu">
     @for(category of categoryElement; track categoryElement){
       <li>
         <a href="/catalog/#{{category.category}}">{{category.category}}</a>
