--- a/src/app/component/catalog-elements/catalog-elements.component.sass
+++ b/src/app/component/catalog-elements/catalog-elements.component.sass
@@ -12,7 +12,7 @@
   @media(max-width: $brakePoints-md)
       grid-template-columns: repeat(2, 250px)
   @media(max-width: $brakePoints-sm)
-    grid-template-columns: repeat(1, 400px)
+    grid-template-columns: repeat(1, 300px)
 
 
 
@@ -40,3 +40,22 @@
     font-size: 1.4rem
     font-family: $mainFont
     padding: 1rem 0
+
+
+.categoryMenu
+  display: flex
+  justify-content: center
+
+  & > li
+
+
+    & > a
+      text-decoration: none
+      color: $mainColor-veryDark
+      font-family: $menuFont
+      font-size: 2rem
+      margin: 0 2rem
+
+      &:hover
+        color: $seconddColor-dark
+
