change mobile style

--- a/src/app/component/catalog-elements/catalog-elements.component.sass
+++ b/src/app/component/catalog-elements/catalog-elements.component.sass
@@ -56,6 +56,10 @@
       font-size: 2rem
       margin: 0 2rem
 
+      @media(max-width: $brakePoints-sm)
+        margin: 0 .5rem
+        font-size: 1.5rem
+
       &:hover
         color: $seconddColor-dark
 
