catalog section ver 2. Off menu catalog

--- a/src/app/component/catalog-elements/catalog-elements.component.html
+++ b/src/app/component/catalog-elements/catalog-elements.component.html
@@ -1,25 +1,26 @@
 <div>
-  <ul class="categoryMenu">
-    @for(category of categoryElement; track categoryElement){
-      <li>
-        <a href="/catalog/#{{category.category}}">{{category.category}}</a>
-      </li>
-    }
-  </ul>
+<!--  <ul class="categoryMenu">-->
+<!--    @for(category of categoryElement; track categoryElement){-->
+<!--      <li>-->
+<!--        <a href="/catalog/#{{category.category}}">{{category.category}}</a>-->
+<!--      </li>-->
+<!--    }-->
+<!--  </ul>-->
 
-@for(category of categoryElement; track categoryElement){
-  <div class="catalogWrapper" id="{{category.category}}">
-    <app-name-section nameSection="{{category.category}}" />
-    <div class="catalogSection">
-    @for(item of data; track data.UniCode){
-      @if(category.codeCategory === item.Category ){
-      <div class="catalogElement">
-        <img src="/katalog/allImage/{{item.Code}}.webp" alt="">
-        <p class="categoryCode">{{item.Code}}</p>
-      </div>
+
+  @for(category of categoryElement; track categoryElement){
+    <div class="catalogWrapper" id="{{category.category}}">
+      <app-name-section nameSection="{{category.category}}" />
+      <div class="catalogSection">
+      @for(item of data; track data.UniCode){
+        @if(category.codeCategory === item.Category ){
+        <div class="catalogElement">
+          <img src="/katalog/allImage/{{item.Code}}.webp" alt="">
+          <p class="categoryCode">{{item.Code}}</p>
+        </div>
+        }
       }
-    }
+      </div>
     </div>
-  </div>
 }
 </div>
