create working storage memory

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -34,7 +34,7 @@
     </menu>
     <section>
       <p>{{ tekstHeader[numberRandom] }}</p>
-      <app-mainbutton [nameButton]="'sprawdź'" />
+      <app-mainbutton [nameButton]="'sprawdź'" [hashUrlAdresButton]="'/catalog'" />
     </section>
   </div>
 </header>
