working total like item. User knows how many items have in box

--- a/src/app/component/like-items/like-items.component.html
+++ b/src/app/component/like-items/like-items.component.html
@@ -1,6 +1,6 @@
 <div class="wrapperHeart">
-  <div (click)="getStorage()" class="elementHeart">
+  <div class="elementHeart">
     <i class="fa-solid fa-heart "></i>
-    <p>{{localElement.length}}</p>
+    <p>{{numberOf}}</p>
   </div>
 </div>
