style heart total input

--- a/src/app/component/like-items/like-items.component.html
+++ b/src/app/component/like-items/like-items.component.html
@@ -1,6 +1,6 @@
 <div class="wrapperHeart">
-  <div class="elementHeart">
-    <i class="fa-solid fa-heart "></i>
+  <div class="elementHeart  {{numberOf > 0 ? 'elementIn' : ''}}">
+    <i class="fa-solid fa-heart"></i>
     <p>{{numberOf}}</p>
   </div>
 </div>
