--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -19,6 +19,7 @@ $hoverColor-light: #C591C1
 $seconddColor-light: #F9BF8B
 $seconddColor-dark: #AC8158
 $thirdColor: #A4D1AF
+$heartColors: #fa3939
 
 
 
