--- a/src/app/component/like-items/like-items.component.sass
+++ b/src/app/component/like-items/like-items.component.sass
@@ -13,10 +13,11 @@
   box-shadow: 0 0 1rem 1rem $mainColor-light
   background-color: $mainColor-light
   border-radius: 50%
+  display: none
 
   & > i
     font-size: 2.5rem
-    color: red
+    color: $heartColors
 
   & > p
     font-size: .8rem
@@ -36,5 +37,4 @@
 
 
 .elementIn
-  color: $seconddColor-light
-
+  display: block
