create scale image, and turn on cookies

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-<!--  <app-cookies/>-->
+  <app-cookies/>
   <app-like-items/>
   <app-header />
   <router-outlet></router-outlet>
