--- a/src/app/component/catalog-elements/catalog-elements.component.sass
+++ b/src/app/component/catalog-elements/catalog-elements.component.sass
@@ -87,3 +87,28 @@
 .activeHeart
   color: $heartColors !important
 
+
+
+.showBIgElement
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  z-index: 1000
+  background-color: rgba($mainColor-veryDark, .2)
+  backdrop-filter: blur(10px)
+
+
+.buttonOff
+  position: absolute
+  right: 2rem
+  top: 2rem
+  height: 2rem
+  width: 2rem
+  background-color: transparent
+  border: 1px solid $mainColor-veryDark
+  border-radius: .5rem
+  font-size: 1.2rem
+  color: $mainColor-veryDark
+
