--- a/src/app/component/catalog-elements/catalog-elements.component.html
+++ b/src/app/component/catalog-elements/catalog-elements.component.html
@@ -1,3 +1,12 @@
+@if(showElement){
+  <div class="showBIgElement">
+      <app-show-big [data]="elementBig[0]"/>
+      <button class="buttonOff" (click)="showElement=''">X</button>
+  </div>
+
+}
+
+
 <div>
   @for(category of categoryElement; track category.category){
     <div class="catalogWrapper" id="{{category.category}}">
@@ -14,9 +23,9 @@
                'activeHeart'
                 : ''  }} fa-solid fa-heart"
                ></i>
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <i (click)="showBigElement(item.Code)"
+               class="fa-solid fa-magnifying-glass"></i>
           </div>
-
         </div>
         }
       }
